# WebShop-project

./: .flake8  README.MD  config.py  pyproject.toml  requirements.txt
html/: catalog.html  category_1.html  contacts.html  main.html
src/: web_app.py
