[tool.poetry]
name = "webshop-project"
version = "0.1.0"
description = ""
authors = ["Timofeev Artem <artemtimofeev@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
python_version = "3.12"

[tool.black]
# Максимальная длина строки
line-length = 119

[tool.isort]
# максимальная длина строки
line_length = 119